[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/menus/ConnectMenu.gd" type="Script" id=1]
[ext_resource path="res://scenes/gui/GUILabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/iosevka-bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/gui/GUIButton.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="GDScript" id=3]
script/source = "extends Button

export(String, FILE) var custom_click

var _click_sound = preload(\"res://assets/sounds/gui/click.ogg\")
var _select_sound = preload(\"res://assets/sounds/gui/click.ogg\")

func _ready():
	if custom_click:
		_click_sound = load(custom_click)

func _click():
	UISound.stream = _click_sound
	UISound.play()

func _click_with_arg(_arg):
	_click()

func _select():
	UISound.stream = _select_sound
	UISound.play()

func _select_with_arg(_arg):
	_select()

func _cancel_sound():
	UISound.stop()"

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="GDScript" id=5]
script/source = "extends Button

export(String, FILE) var custom_click

var _click_sound = preload(\"res://assets/sounds/gui/click.ogg\")
var _select_sound = preload(\"res://assets/sounds/gui/click.ogg\")

func _ready():
	if custom_click:
		_click_sound = load(custom_click)

func _click():
	UISound.stream = _click_sound
	UISound.play()

func _click_with_arg(_arg):
	_click()

func _select():
	UISound.stream = _select_sound
	UISound.play()

func _select_with_arg(_arg):
	_select()

func _cancel_sound():
	UISound.stop()"

[node name="ConnectMenu" type="PopupPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -117.0
margin_right = 256.0
margin_bottom = 117.0
rect_min_size = Vector2( 512, 234 )
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 142.0
margin_top = 18.0
margin_right = 362.0
margin_bottom = 207.0
rect_min_size = Vector2( 220, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" parent="CenterContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_right = 220.0
margin_bottom = 21.0
text = "Connect"
align = 1

[node name="NameContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 220.0
margin_bottom = 49.0

[node name="GUILabel" parent="CenterContainer/VBoxContainer/NameContainer" instance=ExtResource( 2 )]
margin_top = 1.0
margin_right = 72.0
margin_bottom = 22.0
text = "Username:"

[node name="Name" type="LineEdit" parent="CenterContainer/VBoxContainer/NameContainer"]
margin_left = 76.0
margin_right = 220.0
margin_bottom = 24.0
size_flags_horizontal = 3
max_length = 15

[node name="AddressContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 53.0
margin_right = 220.0
margin_bottom = 77.0

[node name="GUILabel" parent="CenterContainer/VBoxContainer/AddressContainer" instance=ExtResource( 2 )]
margin_top = 1.0
margin_right = 88.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
text = "IP Address:"

[node name="IPAddress" type="LineEdit" parent="CenterContainer/VBoxContainer/AddressContainer"]
margin_left = 92.0
margin_right = 220.0
margin_bottom = 24.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="PortContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 81.0
margin_right = 220.0
margin_bottom = 105.0

[node name="GUILabel" parent="CenterContainer/VBoxContainer/PortContainer" instance=ExtResource( 2 )]
margin_top = 1.0
margin_right = 158.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Port:"

[node name="Port" type="LineEdit" parent="CenterContainer/VBoxContainer/PortContainer"]
margin_left = 162.0
margin_right = 220.0
margin_bottom = 24.0
text = "25565"
caret_blink = true
caret_blink_speed = 0.5

[node name="MaxPlayerContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 109.0
margin_right = 220.0
margin_bottom = 133.0

[node name="GUILabel" parent="CenterContainer/VBoxContainer/MaxPlayerContainer" instance=ExtResource( 2 )]
margin_top = 1.0
margin_right = 158.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Max Players:"

[node name="MaxPlayers" type="LineEdit" parent="CenterContainer/VBoxContainer/MaxPlayerContainer"]
margin_left = 162.0
margin_right = 220.0
margin_bottom = 24.0
text = "4"
caret_blink = true
caret_blink_speed = 0.5

[node name="ButtonContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 137.0
margin_right = 220.0
margin_bottom = 164.0

[node name="Connect" parent="CenterContainer/VBoxContainer/ButtonContainer" instance=ExtResource( 4 )]
margin_right = 108.0
margin_bottom = 27.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Connect"
script = SubResource( 3 )

[node name="Cancel" parent="CenterContainer/VBoxContainer/ButtonContainer" instance=ExtResource( 4 )]
margin_left = 112.0
margin_right = 220.0
margin_bottom = 27.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "Cancel"
script = SubResource( 5 )

[node name="Error" parent="CenterContainer/VBoxContainer" instance=ExtResource( 2 )]
modulate = Color( 1, 0, 0, 1 )
margin_top = 168.0
margin_right = 220.0
margin_bottom = 189.0
[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonContainer/Connect" to="." method="_on_Connect_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonContainer/Cancel" to="." method="_on_Cancel_pressed"]
